Fix some styling issues and spacing

--- a/src/renderer/components/Chat/ChatStyles.css
+++ b/src/renderer/components/Chat/ChatStyles.css
@@ -40,7 +40,7 @@
   width: 100%;
   justify-content: space-between;
   /* height: 60vh; */
-  height: 92vh;
+  height: 95%; /*raised the bottom bar up a few pixels*/
   /* align-items: center; */
 }
 
